# mergify-cli

./: .flake8  .gitignore  .mergify.yml  .mypy.ini  AGENTS.md  Cargo.toml  PORT_STATUS.toml  README.md  RELEASING.md  SECURITY_TEST.md  _typos.toml  deny.toml  install.sh  poe.toml  pyoxidizer.bzl  pyproject.toml  renovate.json  requirements-uv.txt  rust-toolchain.toml  test_binary_build.py  tox.ini  version_plugin.py
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: build-wheels.yml  ci.yaml  func-tests-live.yaml  release-rust.yml  release.yml  semantic-pull-request.yaml
compat-tests/: README.md  test_compat.py
compat-tests/cases/bad-subcommand/: args
compat-tests/cases/stack-help/: args  stdout_contains
crates/mergify-ci/: Cargo.toml
crates/mergify-ci/schemas/: mergify-config-schema.json
crates/mergify-ci/src/: detector.rs  git.rs  git_refs.rs  github_event.rs  lib.rs  queue_info.rs  queue_metadata.rs  scopes_send.rs  testing.rs  tests_quarantine.rs  tests_show.rs
crates/mergify-ci/src/junit_process/: command.rs  junit.rs  mod.rs  quarantine.rs  spans.rs  split.rs  upload.rs
crates/mergify-ci/src/scopes_detect/: changed_files.rs  config.rs  matching.rs  mod.rs  outputs.rs
crates/mergify-cli/: Cargo.toml  build.rs
crates/mergify-cli/src/: cli_schema.rs  main.rs  self_update.rs
crates/mergify-cli/src/snapshots/: mergify__tests__cli_schema_golden.snap
crates/mergify-cli/tests/: live_smoke.rs  skill_references.rs  stack_drop.rs  stack_edit.rs  stack_fixup.rs  stack_reorder.rs  stack_reword.rs  stack_squash.rs  stack_sync.rs
crates/mergify-cli/tests/fixtures/: junit_fail.xml
crates/mergify-config/: Cargo.toml
crates/mergify-config/src/: lib.rs  paths.rs  simulate.rs  validate.rs
crates/mergify-core/: Cargo.toml
crates/mergify-core/src/: auth.rs  command_context.rs  env.rs  error.rs  exit_code.rs  http.rs  lib.rs  output.rs  pull_request.rs
crates/mergify-freeze/: Cargo.toml
crates/mergify-freeze/src/: common.rs  create.rs  delete.rs  lib.rs  list.rs  update.rs
crates/mergify-py-shim/: Cargo.toml
crates/mergify-py-shim/src/: lib.rs
crates/mergify-queue/: Cargo.toml
crates/mergify-queue/src/: auth.rs  lib.rs  pause.rs  show.rs  status.rs  unpause.rs
crates/mergify-stack/: Cargo.toml
crates/mergify-stack/hooks/scripts/: commit-msg.sh  prepare-commit-msg.sh
crates/mergify-stack/hooks/wrappers/: post-commit
crates/mergify-stack/src/: approvals.rs  change_id.rs  change_type.rs  changes.rs  comment_upsert.rs  git.rs  lib.rs  local_commits.rs  match_commit.rs  notes_push.rs  plan.rs  plan_display.rs  pr_upsert.rs  progress.rs  push_helpers.rs  rebase_log.rs  rebase_todo.rs  remote_changes.rs  replay.rs  revision_history.rs  revision_note.rs  slug.rs  stack_comment.rs  stack_context.rs  sync_status.rs  test_env.rs  trunk.rs
crates/mergify-stack/src/commands/: checkout.rs  drop.rs  edit.rs  fixup.rs  list.rs  mod.rs  move_cmd.rs  new.rs  note.rs  open.rs  push.rs  reorder.rs  reword.rs  setup.rs  squash.rs  sync.rs
crates/mergify-test-support/: Cargo.toml
crates/mergify-test-support/src/: lib.rs
crates/mergify-tui/: Cargo.toml
crates/mergify-tui/src/: glyph.rs  lib.rs  select.rs  theme.rs  time.rs  tree.rs
docs/: exit-codes.md
func-tests/: README.md  conftest.py  test_junit_process.py  test_live_smoke.py  test_scopes_send.py
func-tests/fixtures/: junit_pass.xml
git_push_stack/: __init__.py  commit_msg_hook.py
git_push_stack/data/: commit-msg
git_push_stack/tests/: test_git_push_stack.py
mergify_cli/: __init__.py  __main__.py  _globals.py  cli.py  dym.py  exit_codes.py  github_types.py  utils.py
mergify_cli/ci/: cli.py  detector.py  github_event.py  junit.py  junit_upload.py  quarantine.py  upload.py
mergify_cli/ci/git_refs/: detector.py
mergify_cli/ci/junit_processing/: cli.py  junit.py  quarantine.py  upload.py
mergify_cli/ci/queue/: metadata.py  notes.py
mergify_cli/ci/scopes/: base_detector.py  changed_files.py  cli.py  exceptions.py  git_refs_detector.py
mergify_cli/ci/scopes/config/: __init__.py  root.py  scopes.py
mergify_cli/config/: cli.py  validate.py
mergify_cli/freeze/: api.py  cli.py
mergify_cli/hooks/: commit-msg
mergify_cli/queue/: api.py  cli.py  skill.md
mergify_cli/reviews/: api.py  cli.py
mergify_cli/stack/: approvals.py  changes.py  checkout.py  cli.py  dashboard.py  drop.py  edit.py  github_action_auto_rebase.py  list.py  list_schema.py  move.py  new.py  note.py  open.py  push.py  reorder.py  replay.py  reword.py  session.py  setup.py  skill.md  skill.py  slug.py  squash.py  sync.py
mergify_cli/stack/claude_hooks/: session-start.sh  settings.json
mergify_cli/stack/hooks/: commit-msg  prepare-commit-msg
mergify_cli/stack/hooks/scripts/: commit-msg.sh  post-commit.sh  pre-push.sh  prepare-commit-msg.sh
mergify_cli/tests/: _slug_oracle.py  conftest.py  test_cli.py  test_dym.py  test_exit_code_contract.py  test_exit_codes.py  test_mergify_cli.py  test_port_status.py  test_utils.py  utils.py
mergify_cli/tests/ci/: pull_request.json  push_event.json  test_check_failing_spans.py  test_cli.py  test_cli_exit_codes.py  test_detector.py  test_github_event.py  test_junit.py  test_upload.py
mergify_cli/tests/ci_issues/: test_junit_upload.py
mergify_cli/tests/config/: test_validate.py
mergify_cli/tests/freeze/: test_cli.py
mergify_cli/tests/queue/: test_cli.py  test_show.py  test_skill.py
mergify_cli/tests/reviews/: test_cli.py
mergify_cli/tests/stack/: test_approvals.py  test_checkout.py  test_dashboard.py  test_drop.py  test_edit.py  test_list.py  test_move.py  test_new.py  test_note.py  test_open.py  test_push.py  test_reorder.py  test_replay.py  test_reword.py  test_session.py  test_setup.py  test_skill.py  test_slug.py  test_squash.py  test_squash_cli.py  test_sync.py
skills/mergify-ci/: SKILL.md
skills/mergify-config/: SKILL.md
skills/mergify-freeze/: SKILL.md
skills/mergify-merge-protections/: SKILL.md
skills/mergify-merge-queue/: SKILL.md
skills/mergify-stack/: SKILL.md
tools/: poetry-install.sh
(+21 files in other folders)
