#
# Copyright © 2021-2026 Mergify SAS
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License. You may obtain
# a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
# MSRV: the minimum supported toolchain. Set to the rustc that
# ships edition 2024, so the project works on any stable from
# early 2025 onwards. CI uses whatever stable is current.
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/Mergifyio/mergify-cli"
authors = ["Mergify Team <hello@mergify.com>"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow-list: pedantic rules that fire too aggressively for a CLI.
# Keep this list intentional and short; revisit per-PR as we learn.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
