[package]
name = "mergify-ci"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Native implementation of `mergify ci` subcommands."
publish = false

[dependencies]
mergify-core = { path = "../mergify-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.14"
temp-env = { version = "0.3", features = ["async_closure"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time"] }
wiremock = "0.6"

[lints]
workspace = true
