[package]
name = "mergify-ci"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Native implementation of `mergify ci` subcommands."
publish = false

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
flate2 = "1"
getrandom = "0.3"
globset = "0.4"
mergify-config = { path = "../mergify-config" }
mergify-core = { path = "../mergify-core" }
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic-messages", "trace"] }
prost = "0.14"
quick-xml = "0.40"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
tokio = { version = "1", default-features = false, features = ["rt"] }
url = "2"

[dev-dependencies]
mergify-test-support = { path = "../mergify-test-support" }
tempfile = "3.14"
temp-env = { version = "0.3", features = ["async_closure"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time"] }
wiremock = "0.6"

[lints]
workspace = true
