[package]
name = "mergify-ci"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Native implementation of `mergify ci` subcommands."
publish = false

[dependencies]
chrono = { workspace = true }
flate2 = { workspace = true }
getrandom = { workspace = true }
glob = { workspace = true }
globset = { workspace = true }
mergify-config = { path = "../mergify-config" }
mergify-core = { path = "../mergify-core" }
opentelemetry-proto = { workspace = true }
prost = { workspace = true }
quick-xml = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
mergify-test-support = { path = "../mergify-test-support" }
tempfile = { workspace = true }
temp-env = { workspace = true, features = ["async_closure"] }
tokio = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
