[package]
name = "mergify-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "mergify CLI — Rust implementation."
publish = false

[[bin]]
name = "mergify"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
mergify-ci = { path = "../mergify-ci" }
mergify-config = { path = "../mergify-config" }
mergify-core = { path = "../mergify-core" }
mergify-freeze = { path = "../mergify-freeze" }
mergify-queue = { path = "../mergify-queue" }
mergify-stack = { path = "../mergify-stack" }
# `mergify self-update`: hits the GitHub Releases API for the
# latest tag, downloads the asset matching the current target,
# verifies it against `SHA256SUMS` (same format the curl|sh
# installer trusts), and atomically swaps the running binary. We
# go through `reqwest` directly here instead of
# `mergify-core::HttpClient` because the latter wraps GitHub-API
# auth + retry, neither of which apply to unauthenticated public
# release downloads. `self_replace` handles the Windows
# can't-rename-over-a-running-exe dance cross-platform.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
self-replace = "1"
sha2 = "0.10"
tempfile = "3"
# Backs the `_internal dump-cli-schema` generator (serializing the
# clap command tree) and the Python-migration helpers (`_internal
# stack-local-commits` et al.).
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time"] }
url = "2"

[dev-dependencies]
regex = "1"
serde_yaml_ng = "0.10"
temp-env = "0.3"
tempfile = "3.14"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
wiremock = "0.6"

[lints]
workspace = true
