[package]
name = "mergify-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "mergify CLI — Rust implementation."
publish = false

[[bin]]
name = "mergify"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
mergify-ci = { path = "../mergify-ci" }
mergify-config = { path = "../mergify-config" }
mergify-core = { path = "../mergify-core" }
mergify-freeze = { path = "../mergify-freeze" }
mergify-queue = { path = "../mergify-queue" }
mergify-stack = { path = "../mergify-stack" }
# Shared TTY/color palette — the binary resolves `--color` once at
# startup and records it via `mergify_tui::set_color_choice`.
mergify-tui = { path = "../mergify-tui" }
# `mergify self-update`: hits the GitHub Releases API for the
# latest tag, downloads the asset matching the current target,
# verifies it against `SHA256SUMS` (same format the curl|sh
# installer trusts), and atomically swaps the running binary. Uses
# `reqwest` directly rather than `mergify-core::http::Client`, which
# is path/JSON/auth-oriented; self-update does unauthenticated
# *binary* downloads across two hosts (api.github.com + asset CDN),
# does its own retry, and maps GitHub failures to the GitHub-API
# exit code. `self_replace` handles the Windows
# can't-rename-over-a-running-exe dance cross-platform.
reqwest = { workspace = true }
self-replace = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
# Backs the `_internal dump-cli-schema` generator (serializing the
# clap command tree) and the Python-migration helpers (`_internal
# stack-local-commits` et al.).
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
serde_yaml_ng = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
wiremock = { workspace = true }

[lints]
workspace = true
