[package]
name = "mergify-config"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Native implementation of `mergify config` subcommands."
publish = false

[dependencies]
mergify-core = { path = "../mergify-core" }
jsonschema = { version = "0.35", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_norway = "0.9"
url = "2"

[dev-dependencies]
tempfile = "3.14"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time"] }
wiremock = "0.6"

[lints]
workspace = true
