[package]
name = "mergify-config"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Native implementation of `mergify config` subcommands."
publish = false

[dependencies]
mergify-core = { path = "../mergify-core" }
jsonschema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
url = { workspace = true }

[dev-dependencies]
mergify-test-support = { path = "../mergify-test-support" }
tempfile = { workspace = true }
temp-env = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
