[package]
name = "mergify-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared foundations for mergify-cli: HTTP, auth, errors, output, git, config, prompts."
publish = false

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt", "rt-multi-thread", "time"] }
wiremock = "0.6"

[lints]
workspace = true
