[package]
name = "mergify-py-shim"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Embedded Python fallback for un-ported mergify-cli commands."
publish = false

[dependencies]
dirs = "6.0"
fs2 = "0.4"
include_dir = "0.7"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
