[package]
name = "mergify-py-shim"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Embedded Python fallback for un-ported mergify-cli commands."
publish = false

[dependencies]
thiserror = "2.0"

[dev-dependencies]
temp-env = "0.3"

[lints]
workspace = true
