[package]
name = "mergify-queue"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Native implementation of `mergify queue` subcommands."
publish = false

[dependencies]
mergify-core = { path = "../mergify-core" }
mergify-tui = { path = "../mergify-tui" }
anstyle = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[dev-dependencies]
mergify-test-support = { path = "../mergify-test-support" }
tokio = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
