[package]
name = "mergify-stack"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Native implementation of `mergify stack` subcommands."
publish = false

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
mergify-core = { path = "../mergify-core" }
# `stack push` live progress reuses the shared TTY/`NO_COLOR`-aware
# color palette instead of hand-rolling ANSI consts.
mergify-tui = { path = "../mergify-tui" }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
# `stack push` live progress: query the terminal width so each
# in-place row is truncated to one physical line (multi-line
# cursor-up redraw breaks if a row wraps).
terminal_size = "0.4"
# Measure CJK/emoji/wide glyphs at their real terminal column width so
# the in-place redraw's truncation never lets a row wrap (a wrap
# desyncs the cursor-up math and corrupts the live block).
unicode-width = "0.2"
# `rt` for `spawn_blocking` — runs the synchronous git fetch/push
# off the async executor so the `stack push` progress spinner keeps
# ticking smoothly across them.
tokio = { version = "1", default-features = false, features = ["rt", "time"] }
url = "2"

[dev-dependencies]
temp-env = "0.3"
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
url = "2"
wiremock = "0.6"

[lints]
workspace = true
